--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="css/slider.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/secciones.css">
-    <script src="https://use.fontawesome.com/502b7294a9.js"></script>
     <link rel="stylesheet" href="css/redes.css">
+    <link rel="stylesheet" href="css/tabla.css">
+    <script src="https://use.fontawesome.com/502b7294a9.js"></script>
   </head>
   <body>
     <div class="red">
@@ -73,7 +74,7 @@
         </div>
       </section>
     </section>
-    <section class="banner-1">
+    <section class="banner-1 animated bounceInLeft">
       <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.<a href="#">Enlace externo</a></h3>
     </section>
     <section class="wrap">
@@ -116,13 +117,126 @@
         </div>
       </section>
     </section>
-    <section class="banner-2">
+    <section class="banner-2 animated flipInY">
       <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.<a href="#">Enlace externo <i class="fa fa-arrow-right" aria-hidden="true"></i></a></h3>
     </section>
     <section class="wrap">
       <section class="bienvenidos">
         <h2>Tabla de precios</h2>
         <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+      </section>
+      <section class="tabla">
+        <div class="tablax4">
+          <div class="caja-precio">
+            <div class="icono-precio">
+              <i class="fa fa-cubes" aria-hidden="true"></i>
+            </div>
+            <div class="">
+              <h4>Plan Uno</h4>
+            </div>
+            <div class="precio-1">
+              <span class="dolar">$</span>
+              5
+              <span class="mes">/mensuales</span>
+            </div>
+            <div class="">
+              <ul class="lista-precios">
+                <li class="lista-espacios">Hosting 2GB</li>
+                <li class="lista-espacios">10 Bases de Datos</li>
+                <li class="lista-espacios">Correos Ilimitados</li>
+                <li class="lista-espacios">Admin. Cpanel</li>
+              </ul>
+            </div>
+            <div class="boton-contratar">
+              <a href="#" class="contratar-a">Contratar</a>
+            </div>
+          </div>
+        </div>
+        <div class="tablaxd">
+          <div class="caja-precio destacado">
+            <div class="icono-precio">
+              <i class="fa fa-cubes" aria-hidden="true"></i>
+            </div>
+            <div class="">
+              <h4>Plan Dos</h4>
+            </div>
+            <div class="">
+              <i class="fa fa-star" aria-hidden="true"></i>
+              <i class="fa fa-star" aria-hidden="true"></i>
+              <i class="fa fa-star" aria-hidden="true"></i>
+              <i class="fa fa-star" aria-hidden="true"></i>
+              <i class="fa fa-star" aria-hidden="true"></i>
+            </div>
+            <div class="precio-1">
+              <span class="dolar">$</span>
+              25
+              <span class="mes">/mensuales</span>
+            </div>
+            <div class="">
+              <ul class="lista-precios">
+                <li class="lista-espacios">Hosting 2GB</li>
+                <li class="lista-espacios">10 Bases de Datos</li>
+                <li class="lista-espacios">Correos Ilimitados</li>
+                <li class="lista-espacios">Admin. Cpanel</li>
+              </ul>
+            </div>
+            <div class="boton-contratar">
+              <a href="#" class="contratar-a">Contratar</a>
+            </div>
+          </div>
+        </div>
+        <div class="tablax4">
+          <div class="caja-precio">
+            <div class="icono-precio">
+              <i class="fa fa-cubes" aria-hidden="true"></i>
+            </div>
+            <div class="">
+              <h4>Plan Tres</h4>
+            </div>
+            <div class="precio-1">
+              <span class="dolar">$</span>
+              95
+              <span class="mes">/mensuales</span>
+            </div>
+            <div class="">
+              <ul class="lista-precios">
+                <li class="lista-espacios">Hosting 2GB</li>
+                <li class="lista-espacios">10 Bases de Datos</li>
+                <li class="lista-espacios">Correos Ilimitados</li>
+                <li class="lista-espacios">Admin. Cpanel</li>
+              </ul>
+            </div>
+            <div class="boton-contratar">
+              <a href="#" class="contratar-a">Contratar</a>
+            </div>
+          </div>
+        </div>
+        <div class="tablax4">
+          <div class="caja-precio">
+            <div class="icono-precio">
+              <i class="fa fa-cubes" aria-hidden="true"></i>
+            </div>
+            <div class="">
+              <h4>Plan Cuatro</h4>
+            </div>
+            <div class="precio-1">
+              <span class="dolar">$</span>
+              155
+              <span class="mes">/mensuales</span>
+            </div>
+            <div class="">
+              <ul class="lista-precios">
+                <li class="lista-espacios">Hosting 2GB</li>
+                <li class="lista-espacios">10 Bases de Datos</li>
+                <li class="lista-espacios">Correos Ilimitados</li>
+                <li class="lista-espacios">Admin. Cpanel</li>
+              </ul>
+            </div>
+            <div class="boton-contratar">
+              <a href="#" class="contratar-a">Contratar</a>
+            </div>
+          </div>
+        </div>
       </section>
     </section>
     <script src="js/particles.js"></script>
