--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/secciones.css">
     <link rel="stylesheet" href="css/redes.css">
     <link rel="stylesheet" href="css/tabla.css">
+    <link rel="stylesheet" href="sss/sss.css" type="text/css" media="all">
     <script src="https://use.fontawesome.com/502b7294a9.js"></script>
   </head>
   <body>
@@ -239,9 +240,25 @@
         </div>
       </section>
     </section>
+    <section class="testimonios">
+      <div class="slider">
+        <div class="slider-1">
+          <img src="img/equipo.png" alt="">
+          <h2>Juan Pérez</h2>
+          <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+        </div>
+        <div class="slider-1">
+          <img src="img/equipo-2.png" alt="">
+          <h2>John Doe</h2>
+          <h3>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+        </div>
+      </div>
+    </section>
     <script src="js/particles.js"></script>
     <script src="js/app.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="js/alto.js"></script>
+    <script src="sss/sss.min.js"></script>>
+    <script>jQuery(function($) {$('.slider').sss();});</script>
   </body>
 </html>
