Formulario de contacto creado

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/secciones.css">
     <link rel="stylesheet" href="css/redes.css">
     <link rel="stylesheet" href="css/tabla.css">
+    <link rel="stylesheet" href="css/formulario.css">
     <link rel="stylesheet" href="sss/sss.css" type="text/css" media="all">
     <script src="https://use.fontawesome.com/502b7294a9.js"></script>
   </head>
@@ -254,11 +255,32 @@
         </div>
       </div>
     </section>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63390.46161269154!2d-79.88406022339258!3d-6.7815550950805745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x904cef232963dfff%3A0xa703e3454a7814bb!2sChiclayo!5e0!3m2!1ses-419!2spe!4v1505341024674" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <section class="wrap">
+      <section class="bienvenidos">
+        <h2>Contáctanos</h2>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+      </section>
+      <section class="dos-columnas">
+        <div class="formulario">
+          <h4>Formulario de contacto</h4>
+          <form class="" action="enviar.php" method="post">
+            <input type="text" name="nombre" placeholder="Nombre" class="caja-1" value="">
+            <input type="email" name="email" placeholder="Email" class="caja-1" value="">
+            <input type="tel" name="telefono" placeholder="Teléfono" class="caja-1" value="">
+            <input type="text" name="asunto" placeholder="Asunto" class="caja-1" value="">
+            <textarea name="comentarios" rows="8" cols="80" class="caja-2" placeholder="Deja tus comentarios aquí"></textarea>
+            <button type="submit" class="contratar-a correr">Enviar</button>
+          </form>
+        </div>
+      </section>
+    </section>
+
     <script src="js/particles.js"></script>
     <script src="js/app.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="js/alto.js"></script>
-    <script src="sss/sss.min.js"></script>>
+    <script src="sss/sss.min.js"></script>
     <script>jQuery(function($) {$('.slider').sss();});</script>
   </body>
 </html>
