--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/tabla.css">
     <link rel="stylesheet" href="css/formulario.css">
     <link rel="stylesheet" href="sss/sss.css" type="text/css" media="all">
+    <link rel="stylesheet" href="css/responsive.css">
     <script src="https://use.fontawesome.com/502b7294a9.js"></script>
   </head>
   <body>
